# psycopg-pool-prometheus

./: LICENSE  README.rst  pyproject.toml  setup.cfg
docs/: conf.py  index.rst  install.rst  psycopg-pool-prometheus.rst  psycopg_pool_prometheus.rst
psycopg_pool_prometheus/: __init__.py
tests/: test_psycopg_pool_prometheus.py
