[metadata]
name = psycopg-pool-prometheus
description = Expose metrics maintained by psycopg3's connection pool to prometheus.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = prometheus psycopg3
author = Barnaby Shearer
author_email = b@zi.is
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
project_urls =
    Source = https://github.com/BarnabyShearer/psycopg-pool-prometheus
    Tracker = https://github.com/BarnabyShearer/psycopg-pool-prometheus/issues
    Documentation = https://psycopg-pool-prometheus.readthedocs.io/en/latest/

[options]
packages = find:
install_requires = 
    psycopg[pool]
    prometheus_client
python_requires = >=3.7

[options.package_data]
* = py.typed, *.c, *.h

[bdist_wheel]
universal=1
